[gd_scene load_steps=4 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://tileset_grass_dirt.tres" type="TileSet" id=2]

[sub_resource type="NavigationPolygon" id=1]

vertices = Vector2Array( 779.661, 461.801, 787.304, -246.377, 883.536, -251.929, 879.808, 521.715, 848.52, 557.084, 561.338, 463.271, 505.705, 561.165, 463.534, 518.994, 560.12, 71.4308, 460.813, 117.684, 530.192, 18.3762, 307.091, 15.6554, 371.028, 119.044, 270.361, 57.827, 266.28, 332.623, 366.947, 389.758, 326.136, 433.29, 56.782, 331.262, 113.918, 436.011, 17.3311, 366.632, 17.3311, 684.959, 113.918, 683.599 )
polygons = [ IntArray( 0, 1, 2, 3, 4 ), IntArray( 5, 0, 4, 6, 7 ), IntArray( 8, 5, 7, 9, 10 ), IntArray( 11, 10, 9, 12, 13 ), IntArray( 14, 13, 12, 15, 16 ), IntArray( 17, 14, 16, 18, 19 ), IntArray( 20, 19, 18, 21 ) ]
outlines = [ Vector2Array( 17.3311, 684.959, 17.3311, 366.632, 56.782, 331.262, 266.28, 332.623, 270.361, 57.827, 307.091, 15.6554, 530.192, 18.3762, 560.12, 71.4308, 561.338, 463.271, 779.661, 461.801, 787.304, -246.377, 883.536, -251.929, 879.808, 521.715, 848.52, 557.084, 505.705, 561.165, 463.534, 518.994, 460.813, 117.684, 371.028, 119.044, 366.947, 389.758, 326.136, 433.29, 113.918, 436.011, 113.918, 683.599 ) ]

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

color = Color( 1, 1, 1, 1 )

[node name="map" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 4, 1, 4, 2, 4, 3, 4, 4, 9, 5, 7, 6, 7, 7, 7, 8, 10, 9, 4, 10, 4, 11, 4, 12, 5, 13, 3, 14, 4, 15, 4, 65536, 4, 65537, 31, 65538, 31, 65539, 31, 65540, 5, 65541, 0, 65542, 1, 65543, 2, 65544, 3, 65545, 4, 65546, 4, 65547, 4, 65548, 5, 65549, 3, 65550, 4, 65551, 4, 131072, 4, 131073, 4, 131074, 4, 131075, 31, 131076, 5, 131077, 3, 131078, 4, 131079, 5, 131080, 3, 131081, 4, 131082, 4, 131083, 4, 131084, 5, 131085, 3, 131086, 4, 131087, 4, 196608, 4, 196609, 31, 196610, 31, 196611, 31, 196612, 5, 196613, 3, 196614, 4, 196615, 5, 196616, 3, 196617, 4, 196618, 4, 196619, 4, 196620, 5, 196621, 3, 196622, 4, 196623, 4, 262144, 4, 262145, 4, 262146, 4, 262147, 4, 262148, 5, 262149, 3, 262150, 4, 262151, 5, 262152, 3, 262153, 4, 262154, 4, 262155, 4, 262156, 5, 262157, 3, 262158, 4, 262159, 4, 327680, 9, 327681, 7, 327682, 7, 327683, 7, 327684, 8, 327685, 3, 327686, 4, 327687, 5, 327688, 3, 327689, 4, 327690, 4, 327691, 4, 327692, 5, 327693, 3, 327694, 4, 327695, 4, 393216, 5, 393217, 0, 393218, 1, 393219, 1, 393220, 1, 393221, 12, 393222, 4, 393223, 5, 393224, 3, 393225, 4, 393226, 4, 393227, 4, 393228, 5, 393229, 3, 393230, 4, 393231, 4, 458752, 5, 458753, 3, 458754, 4, 458755, 4, 458756, 4, 458757, 4, 458758, 4, 458759, 5, 458760, 6, 458761, 7, 458762, 7, 458763, 7, 458764, 8, 458765, 3, 458766, 4, 458767, 4, 524288, 5, 524289, 3, 524290, 4, 524291, 31, 524292, 31, 524293, 31, 524294, 4, 524295, 11, 524296, 1, 524297, 1, 524298, 1, 524299, 1, 524300, 1, 524301, 12, 524302, 4, 524303, 4, 589824, 5, 589825, 3, 589826, 4, 589827, 4, 589828, 4, 589829, 4, 589830, 4, 589831, 4, 589832, 4, 589833, 4, 589834, 4, 589835, 4, 589836, 4, 589837, 4, 589838, 4, 589839, 4 )

[node name="nav" type="Navigation2D" parent="."]

[node name="nav_poly" type="NavigationPolygonInstance" parent="nav"]

navpoly = SubResource( 1 )
enabled = true

[node name="start_pos" type="Position2D" parent="."]

transform/pos = Vector2( 64.7716, 655.119 )

[node name="end_pos" type="Position2D" parent="."]

transform/pos = Vector2( 832.875, -187.379 )

[node name="mob_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]


